Fix z-index for flash messages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -131,3 +131,8 @@
 .pb-8 {
   padding-bottom: 16em;
 }
+
+
+.alert {
+  z-index: $zindex-popover;
+}
